...
                            <constraint firstItem="6eT-KL-AbA" firstAttribute="top" secondItem="PcE-cC-Gxg" secondAttribute="bottom" constant="34" id="f86-Al-b94"/>
                            <constraint firstItem="Lq4-4q-oKO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="w2o-Oh-S9Z"/>
                            <constraint firstItem="PcE-cC-Gxg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="zyU-ib-kW1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Main" id="dbx-m2-g7W">
                        <barButtonItem key="rightBarButtonItem" title="Players" style="plain" id="LOx-sp-PWE">
                            <connections>
                                <segue destination="Lbr-mg-rK8" kind="show" id="oqA-SV-xHS"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Yp-93-32U">
                                        <rect key="frame" x="8" y="89" width="112" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="player1ChangeAddress"/>
                                        <color key="tintColor" red="1" green="0.16565630179999999" blue="0.35589987099999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Change address"/>
                                        <connections>
                                            <action selector="changePlayer1Address:" destination="Lbr-mg-rK8" eventType="touchUpInside" id="8Yc-Vq-3kH"/>
                                        </connections>
                                    </button>
...
